_build/_log
### Starting build.
# Target: myocamlbuild, tags: { link, native, ocaml, program }
/Users/abhay/.opam/4.08.1/bin/ocamlopt.opt unix.cmxa -I /Users/abhay/.opam/4.08.1/lib/ocamlbuild /Users/abhay/.opam/4.08.1/lib/ocamlbuild/ocamlbuildlib.cmxa myocamlbuild.ml /Users/abhay/.opam/4.08.1/lib/ocamlbuild/ocamlbuild.cmx -o myocamlbuild
+ /Users/abhay/.opam/4.08.1/bin/ocamlopt.opt unix.cmxa -I /Users/abhay/.opam/4.08.1/lib/ocamlbuild /Users/abhay/.opam/4.08.1/lib/ocamlbuild/ocamlbuildlib.cmxa myocamlbuild.ml /Users/abhay/.opam/4.08.1/lib/ocamlbuild/ocamlbuild.cmx -o myocamlbuild
File "myocamlbuild.ml", line 1, characters 35-68:
1 | let _ = Ocamlbuild_plugin.dispatch Ocamlbuild_js_of_ocaml.dispatcher
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unbound module Ocamlbuild_js_of_ocaml
Command exited with code 2.
# Compilation unsuccessful.
